feat: add adaptive styles to LabSection

--- a/src/components/LabSection/LabSection.module.scss
+++ b/src/components/LabSection/LabSection.module.scss
@@ -4,8 +4,7 @@
 }
 
 .labSection {
-  position: relative;
-
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,7 +15,7 @@
 
 .sectionTitle {
   width: 100%;
-  margin: 0 0 100px;
+  margin: 0;
   padding: 0 0 0 100px;
 
   font-family: Germano, sans-serif;
@@ -28,18 +27,24 @@
   text-align: left;
 }
 
-.labButton {
-  position: absolute;
-  top: 95px;
-  left: 50%;
-  transform: translate(-50%, 0);
-}
-
-.list {
+.sectionContent {
   position: relative;
+
   width: 100%;
   max-width: 1500px;
   min-height: 850px;
+  margin: 100px 0 0;
+}
+
+.labButton {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.list {
+  width: 100%;
 }
 
 .card {
@@ -71,41 +76,197 @@
     font-style: normal;
     line-height: 1.19; // 38px; /* 118.75% */
     color: var(--dark-blue, #002d63);
+    text-align: center;
   }
 }
 
 .cardPosition {
+  --side-offset: 188px;
+
   position: absolute;
 
   &_1 {
-    top: 0;
-    right: 188px;
+    inset: 0 var(--side-offset) auto auto;
   }
 
   &_2 {
-    top: 50%;
-    right: 0;
+    inset: 50% 0 auto auto;
     transform: translate(0, -50%);
   }
 
   &_3 {
-    right: 188px;
-    bottom: 0;
+    inset: auto var(--side-offset) 0 auto;
   }
 
   &_4 {
-    bottom: 0;
-    left: 188px;
+    inset: auto auto 0 var(--side-offset);
   }
 
   &_5 {
-    top: 50%;
-    left: 0;
+    inset: 50% auto auto 0;
     transform: translate(0, -50%);
   }
 
   &_6 {
-    top: 0;
-    left: 188px;
+    inset: 0 auto auto var(--side-offset);
+  }
+}
+
+@media screen and (width <= 1280px) {
+  .sectionTitle {
+    padding: 0 0 0 50px;
+  }
+
+  .sectionContent {
+    max-width: 1118px;
+    min-height: 800px;
+    margin: 80px 0 0;
+  }
+
+  .card {
+    max-width: 370px;
+
+    &Text {
+      font-size: 24px;
+      line-height: 1.17; // 28px; /* 116.667% */
+    }
+  }
+
+  .cardPosition {
+    --side-offset: 140px;
+  }
+}
+
+@media screen and (width <= 1000px) {
+  .card {
+    row-gap: 8px;
+    max-width: 240px;
+
+    &Number {
+      font-size: 80px;
+
+      -webkit-text-stroke: 2px var(--darkblue);
+    }
+
+    &Text {
+      font-size: 20px;
+      line-height: 1.2; // 24px; /* 120% */
+    }
+  }
+}
+
+@media screen and (width <= 768px) {
+  .sectionTitle {
+    font-size: 48px;
+  }
+
+  .sectionContent {
+    width: 91vw;
+    min-height: 870px;
+    margin: 30px 0 0;
+  }
+
+  .card {
+    row-gap: 8px;
+    max-width: 240px;
+
+    &Number {
+      font-size: 80px;
+
+      -webkit-text-stroke: 2px var(--darkblue);
+    }
+
+    &Text {
+      font-size: 20px;
+      line-height: 1.2; // 24px; /* 120% */
+    }
+  }
+
+  .cardPosition {
+    --vertical-offset: 110px;
+
+    position: absolute;
+    transform: translate(0, 0);
+
+    &_1 {
+      inset: 0 auto auto 50%;
+      transform: translate(-50%, 0);
+    }
+
+    &_2 {
+      inset: var(--vertical-offset) auto auto 0;
+    }
+
+    &_3 {
+      inset: var(--vertical-offset) 0 auto auto;
+    }
+
+    &_4 {
+      inset: auto auto var(--vertical-offset) 0;
+    }
+
+    &_5 {
+      inset: auto 0 var(--vertical-offset) auto;
+    }
+
+    &_6 {
+      inset: auto auto 0 50%;
+      transform: translate(-50%, 0);
+    }
+  }
+}
+
+@media screen and (width <= 720px) {
+  .cardPosition {
+    --vertical-offset: 160px;
+  }
+}
+
+@media screen and (width <= 720px) {
+  .cardPosition {
+    --vertical-offset: 160px;
+  }
+
+  .card {
+    max-width: 200px;
+
+    &Number {
+      font-size: 60px;
+    }
+
+    &Text {
+      font-size: 16px;
+      line-height: 1.12; // 18px; /* 112.5% */
+    }
+  }
+}
+
+@media screen and (width <= 440px) {
+  // <= 360px
+  .sectionTitle {
+    padding: 0 0 0 16px;
+    font-size: 24px;
+  }
+
+  .sectionContent {
+    width: 91vw;
+    min-height: 780px;
+  }
+
+  .card {
+    max-width: 150px;
+
+    &Number {
+      font-size: 40px;
+    }
+
+    &Text {
+      font-size: 16px;
+      line-height: 1.12; // 18px; /* 112.5% */
+    }
+  }
+
+  .cardPosition {
+    --vertical-offset: 120px;
   }
 }
