fix: fix styles for underline

--- a/src/components/ui/Text/Text.module.scss
+++ b/src/components/ui/Text/Text.module.scss
@@ -2,9 +2,12 @@
   font-family: var(--text-1-font-family, 'GostTypeB-Standard', sans-serif);
   font-weight: var(--text-1-font-weight, 400);
   color: var(--darkblue, #002d63);
+  text-decoration-skip-ink: none;
 
   &__line {
     text-decoration: underline;
+    text-decoration-thickness: 2px;
+    text-underline-offset: 4px;
   }
 
   &__outlined {
@@ -49,16 +52,23 @@
   &__view-title-2 {
     font-size: var(--title-h-2-font-size, 80px);
     line-height: 1;
+    text-decoration-thickness: 4px;
+    text-underline-offset: 12px;
+    letter-spacing: -3.2px;
   }
 
   &__view-title-3 {
     font-size: var(--title-h-3-font-size, 64px);
     line-height: 1;
+    text-decoration-thickness: 3px;
+    text-underline-offset: 10px;
   }
 
   &__view-title-4 {
     font-size: var(--title-h-4-font-size, 48px);
     line-height: 1;
+    text-decoration-thickness: 2.5px;
+    text-underline-offset: 8px;
   }
 
   &__view-text-1 {
@@ -74,5 +84,7 @@
   &__view-text-3 {
     font-size: var(--text-3-line-font-size, 20px);
     line-height: var(--text-3-line-line-height, 24px);
+    text-decoration-thickness: 1px;
+    text-underline-offset: 3px;
   }
 }
