fix: submit button position, checkboxContainer margin-bottom

--- a/src/components/Overlay/Overlay.module.scss
+++ b/src/components/Overlay/Overlay.module.scss
@@ -51,6 +51,17 @@
   }
 }
 
+
+@media screen and (width <= 690px) {
+  .overlay {
+    &Container {
+      margin: 0;
+      max-width: 100%;
+      border-radius: 0;
+    }
+  }
+}
+
 @media screen and (width <= 360px) {
   .overlay {
     &Container {
