--- a/src/components/ProductsSection/ProductsSection.module.scss
+++ b/src/components/ProductsSection/ProductsSection.module.scss
@@ -35,8 +35,8 @@
   align-items: center;
 
   width: 100%;
-  max-width: 1720px;
   margin: 100px 0 0;
+  padding: 0 100px;
 }
 
 .product {
@@ -49,6 +49,7 @@
 
   &Header {
     display: flex;
+    column-gap: 30px;
     align-items: center;
     border-bottom: 1px solid var(--dark-blue, #002d63);
   }
@@ -89,6 +90,9 @@
   }
 
   &Link {
+    display: inline-block;
+    text-wrap: nowrap;
+
     &:hover,
     &:focus {
       text-decoration: underline;
@@ -103,20 +107,7 @@
   }
 }
 
-@media screen and (width <= 1280px) {
-  .productsSection {
-    margin: 0 0 160px;
-  }
-
-  .sectionTitle {
-    padding: 0 0 0 50px;
-  }
-
-  .list {
-    max-width: 1180px;
-    margin: 80px 0 0;
-  }
-
+@media screen and (width <= 1450px) {
   .product {
     &Title {
       font-size: 100px;
@@ -127,6 +118,41 @@
       max-width: 490px;
       font-size: 24px;
       line-height: 1.17; // 28px; /* 116.667% */
+    }
+  }
+}
+
+@media screen and (width <= 1280px) {
+  .productsSection {
+    margin: 0 0 160px;
+  }
+
+  .sectionTitle {
+    padding: 0 0 0 50px;
+  }
+
+  .list {
+    margin: 80px 0 0;
+    padding: 0 50px;
+  }
+}
+
+@media screen and (width <= 1000px) {
+  .product {
+    &Title {
+      font-size: 64px;
+      line-height: 1; // 64px; /* 100% */
+    }
+
+    &Info {
+      max-width: 252px;
+      font-size: 16px;
+      line-height: 1.13; // 18px; /* 112.5% */
+    }
+
+    &Footer {
+      font-size: 20px;
+      line-height: 1.2; // 24px; /* 120% */
     }
   }
 }
@@ -142,8 +168,8 @@
   }
 
   .list {
-    max-width: 704px;
     margin: 32px 0 0;
+    padding: 0 32px;
   }
 
   .product {
@@ -165,14 +191,25 @@
   }
 }
 
-@media screen and (width <= 360px) {
-  .sectionTitle {
-    padding: 0 0 0 16px;
-    font-size: 24px;
+@media screen and (width <= 730px) {
+  .divider {
+    display: none;
   }
 
-  .list {
-    max-width: 328px;
+  .product {
+    &Footer {
+      flex-direction: column;
+    }
+  }
+}
+
+@media screen and (width <= 650px) {
+  .divider {
+    display: none;
+  }
+
+  .sectionTitle {
+    font-size: 24px;
   }
 
   .product {
@@ -195,8 +232,15 @@
       flex-direction: column;
     }
   }
+}
 
-  .divider {
-    display: none;
+@media screen and (width <= 360px) {
+  .sectionTitle {
+    padding: 0 0 0 16px;
+    font-size: 24px;
+  }
+
+  .list {
+    padding: 0 16px;
   }
 }
