--- a/src/components/ProductsSection/ProductsSection.module.scss
+++ b/src/components/ProductsSection/ProductsSection.module.scss
@@ -62,6 +62,7 @@
     font-weight: 300;
     font-style: normal;
     line-height: 0.86; // 120px; /* 85.714% */
+    text-wrap: nowrap;
   }
 
   &Info {
