--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -44,6 +44,7 @@ body {
   box-shadow: 0 10px 20px 0 rgb(0 45 99 / 30%);
 
   &Body {
+    width: max-content;
     margin: 0;
     padding: 0;
 
@@ -51,7 +52,6 @@ body {
     font-weight: 400;
     font-style: normal;
     line-height: 1.17; // 28px; /* 116.667% */
-    text-wrap: nowrap;
 
     @media screen and (width <= 730px) {
       width: 180px;
