--- a/src/pages/AboutUs/AboutUs.module.scss
+++ b/src/pages/AboutUs/AboutUs.module.scss
@@ -1,7 +1,5 @@
 .pageTitle {
   margin-top: 100px;
-
-  // margin-bottom: -50px;
   margin-left: -35px; // combine with letter-spacing
 
   font-family: Molot, sans-serif;
@@ -11,10 +9,6 @@
   line-height: 0.78; // 600px; /* 93.75% */
   color: var(--dark-blue, #002d63);
   text-align: center;
-
-  // text-decoration: underline;
-  // text-decoration-thickness: 4px;
-  // text-underline-offset: 5px;
   letter-spacing: -12.8px;
 
   @media screen and (width < 1920px) {
@@ -44,12 +38,30 @@
   }
 }
 
+.subTitleWrapper {
+  box-sizing: border-box;
+  width: 100%;
+  padding: 0 100px;
+
+  @media screen and (width <= 1280px) {
+    padding: 0 50px;
+  }
+
+  @media screen and (width <= 768px) {
+    padding: 0 32px;
+    border-width: 2px 0 0;
+  }
+
+  @media screen and (width <= 360px) {
+    padding: 0 16px;
+  }
+}
+
 .subTitle {
   box-sizing: border-box;
   width: 100%;
-  height: 0;
-  margin: 0; // under title
-  padding: 0 100px;
+  margin: 0;
+  padding: 0;
 
   font-family: 'GOST type B', sans-serif;
   font-size: 32px;
@@ -58,30 +70,17 @@
   line-height: 38px; /* 118.75% */
   color: var(--dark-blue, #002d63);
 
-  @media screen and (width <= 1280px) {
-    padding: 0 50px;
-  }
-
-  @media screen and (width <= 768px) {
-    padding: 0 32px;
-    font-size: 24px;
-    line-height: 1.17; // 28px; /* 116.667% */
-    border-width: 2px 0 0;
-  }
-
-  @media screen and (width <= 360px) {
-    font-size: 20px;
-    line-height: 1.2; // 24px; /* 120% */
-  }
-}
-
-.divider {
-  width: 100%;
   border-color: var(--darkblue, #002d63);
   border-style: solid;
   border-width: 4px 0 0;
 
   @media screen and (width <= 768px) {
-    border-width: 2px 0 0;
+    font-size: 24px;
+    line-height: 1.17; // 28px; /* 116.667% */
+  }
+
+  @media screen and (width <= 360px) {
+    font-size: 20px;
+    line-height: 1.2; // 24px; /* 120% */
   }
 }
