--- a/src/pages/AboutUs/AboutUs.module.scss
+++ b/src/pages/AboutUs/AboutUs.module.scss
@@ -25,15 +25,18 @@
   }
 
   @media screen and (width <= 768px) {
+    margin-top: 125px;
     margin-left: -18px; // combine with letter-spacing
     font-size: 34.6vw; // 265px;
     letter-spacing: -7.95px;
   }
 
   @media screen and (width <= 360px) {
-    margin-bottom: -10px;
+    margin-top: 130px;
     margin-left: -8px; // combine with letter-spacing
+
     font-size: 36.1vw; // 130px;
+    line-height: 0.85;
     letter-spacing: -6.5px;
   }
 }
@@ -82,5 +85,6 @@
   @media screen and (width <= 360px) {
     font-size: 20px;
     line-height: 1.2; // 24px; /* 120% */
+    border-width: 2px 0 0;
   }
 }
