feat: add transition effect on hover

--- a/src/pages/AboutUs/BottomGridSection/BottomGridSection.module.scss
+++ b/src/pages/AboutUs/BottomGridSection/BottomGridSection.module.scss
@@ -83,6 +83,8 @@
   background: var(--white, #fff);
   border: 2px solid var(--dark-blue, #002d63);
 
+  transition: all 0.2s ease;
+
   &Title {
     font-family: Germano, sans-serif;
     font-size: 64px;
