--- a/src/pages/AboutUs/TopGridSection/TopGridSection.module.scss
+++ b/src/pages/AboutUs/TopGridSection/TopGridSection.module.scss
@@ -129,7 +129,7 @@
     font-size: 64px;
     font-weight: 300;
     font-style: normal;
-    line-height: 64px; /* 100% */
+    line-height: 1; // 64px; /* 100% */
     color: var(--dark-blue, #002d63);
 
     @media screen and (width <= 1280px) {
@@ -148,7 +148,7 @@
     font-size: 32px;
     font-weight: 400;
     font-style: normal;
-    line-height: 38px; /* 118.75% */
+    line-height: 1.19; // 38px; /* 118.75% */
     color: var(--white, #fff);
 
     // color: var(--dark-blue, #002d63);
