--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -9,7 +9,7 @@
   transition: all 300ms ease-in;
 
   &_hidden {
-    transform: translate3d(0, -100%, 0);
+    transform: translate3d(0, -120%, 0); // +20% to hide shadow of carousel menu when header hidden
   }
 }
 
@@ -152,10 +152,6 @@
 }
 
 @media screen and (width <= 768px) {
-  .header {
-    padding-bottom: 20px; // to hide shadow of carousel menu when header hidden
-  }
-
   .content {
     position: relative;
     z-index: 1;
