--- a/src/components/LeadSection/LeadSection.module.scss
+++ b/src/components/LeadSection/LeadSection.module.scss
@@ -6,6 +6,28 @@
   box-sizing: border-box;
   width: 100%;
   padding: 0 100px;
+
+  @media screen and (width <= 1840px) {
+    column-gap: normal;
+    justify-content: space-between;
+  }
+
+  @media screen and (width <= 1280px) {
+    padding: 0 50px;
+  }
+
+  @media screen and (width <= 768px) {
+    grid-template-columns: 320px max-content;
+    gap: 52px 24px;
+    padding: 0 32px;
+  }
+
+  @media screen and (width <= 360px) {
+    grid-template-columns: auto;
+    grid-template-rows: max-content max-content max-content;
+    row-gap: 48px;
+    padding: 0 16px;
+  }
 }
 
 .info {
@@ -17,9 +39,27 @@
   font-style: normal;
   line-height: 1.19; // 38px; /* 118.75% */
   color: var(--dark-blue, #002d63);
+
+  @media screen and (width <= 1280px) {
+    max-width: 355px;
+    font-size: 24px;
+    line-height: 1.17; //  28px; /* 116.667% */
+  }
+
+  @media screen and (width <= 768px) {
+    font-size: 20px;
+    line-height: 1.2; // 24px; /* 120% */
+  }
+
+  @media screen and (width <= 360px) {
+  }
 }
 
 .description {
+  display: flex;
+  flex-direction: column;
+  row-gap: 30px;
+
   max-width: 500px;
 
   font-family: 'GOST type B', sans-serif;
@@ -28,6 +68,24 @@
   font-style: normal;
   line-height: 1.17; // 28px; /* 116.667% */
   color: var(--dark-blue, #002d63);
+
+  @media screen and (width <= 1280px) {
+    row-gap: 20px;
+    max-width: 360px;
+    font-size: 20px;
+    line-height: 1.2; // 24px; /* 120% */
+  }
+
+  @media screen and (width <= 768px) {
+    grid-column: 2 / span 1;
+    grid-row: 1 / span 2;
+  }
+
+  @media screen and (width <= 360px) {
+    grid-column: 1 / span 1;
+    grid-row: 3 / span 1;
+    row-gap: 16px;
+  }
 }
 
 .cards {
@@ -37,6 +95,24 @@
 
   max-width: 400px;
   margin: 0 0 0 30px;
+
+  @media screen and (width <= 1280px) {
+    row-gap: 20px;
+    max-width: 300px;
+    margin: 0 0 0 50px;
+  }
+
+  @media screen and (width <= 768px) {
+    grid-column: 1 / span 1;
+    grid-row: 2 / span 1;
+    max-width: 280px;
+    margin: 0;
+  }
+
+  @media screen and (width <= 360px) {
+    row-gap: 15px;
+    max-width: 100%;
+  }
 }
 
 .card {
@@ -50,7 +126,7 @@
     align-items: flex-end;
 
     width: 100%;
-    margin: 4px 0;
+    padding: 4px 0;
 
     border-bottom: 1px solid var(--dark-blue, #002d63);
   }
@@ -62,6 +138,17 @@
     font-style: normal;
     line-height: 1; // 100px; /* 100% */
     color: var(--dark-blue, #002d63);
+
+    @media screen and (width <= 1280px) {
+      font-size: 80px;
+    }
+
+    @media screen and (width <= 768px) {
+      font-size: 40px;
+    }
+
+    @media screen and (width <= 360px) {
+    }
   }
 
   &Title {
@@ -73,6 +160,17 @@
     font-style: normal;
     line-height: 1; // 48px; /* 100% */
     color: var(--dark-blue, #002d63);
+
+    @media screen and (width <= 1280px) {
+    }
+
+    @media screen and (width <= 768px) {
+      margin: 0 0 2px;
+      font-size: 24px;
+    }
+
+    @media screen and (width <= 360px) {
+    }
   }
 
   &Text {
@@ -82,5 +180,27 @@
     font-style: normal;
     line-height: 1.19; // 38px; /* 118.75% */
     color: var(--dark-blue, #002d63);
+
+    @media screen and (width <= 1280px) {
+      font-size: 24px;
+      line-height: 1.17; // 28px; /* 116.667% */
+    }
+
+    @media screen and (width <= 768px) {
+      font-size: 20px;
+      line-height: 1.2; // 24px; /* 120% */
+    }
   }
+
+  @media screen and (width <= 360px) {
+  }
+}
+
+@media screen and (width <= 1280px) {
+}
+
+@media screen and (width <= 768px) {
+}
+
+@media screen and (width <= 360px) {
 }
