--- a/src/components/LeadSection/LeadSection.module.scss
+++ b/src/components/LeadSection/LeadSection.module.scss
@@ -12,21 +12,37 @@
     justify-content: space-between;
   }
 
-  @media screen and (width <= 1280px) {
+  @media screen and (width <= 1650px) {
     padding: 0 50px;
   }
 
+  @media screen and (width <= 1280px) {
+    grid-template-columns: auto auto max-content;
+    column-gap: 30px;
+  }
+
+  @media screen and (width <= 1000px) {
+    grid-template-columns: 320px auto;
+    row-gap: 52px;
+  }
+
   @media screen and (width <= 768px) {
-    grid-template-columns: 320px max-content;
-    gap: 52px 24px;
+    column-gap: 24px;
     padding: 0 32px;
+  }
+
+  @media screen and (width <= 700px) {
+    grid-template-columns: auto auto;
+  }
+
+  @media screen and (width <= 480px) {
+    padding: 0 16px;
   }
 
   @media screen and (width <= 360px) {
     grid-template-columns: auto;
     grid-template-rows: max-content max-content max-content;
     row-gap: 48px;
-    padding: 0 16px;
   }
 }
 
@@ -40,7 +56,7 @@
   line-height: 1.19; // 38px; /* 118.75% */
   color: var(--dark-blue, #002d63);
 
-  @media screen and (width <= 1280px) {
+  @media screen and (width <= 1650px) {
     max-width: 355px;
     font-size: 24px;
     line-height: 1.17; //  28px; /* 116.667% */
@@ -49,9 +65,6 @@
   @media screen and (width <= 768px) {
     font-size: 20px;
     line-height: 1.2; // 24px; /* 120% */
-  }
-
-  @media screen and (width <= 360px) {
   }
 }
 
@@ -69,14 +82,14 @@
   line-height: 1.17; // 28px; /* 116.667% */
   color: var(--dark-blue, #002d63);
 
-  @media screen and (width <= 1280px) {
+  @media screen and (width <= 1650px) {
     row-gap: 20px;
     max-width: 360px;
     font-size: 20px;
     line-height: 1.2; // 24px; /* 120% */
   }
 
-  @media screen and (width <= 768px) {
+  @media screen and (width <= 1000px) {
     grid-column: 2 / span 1;
     grid-row: 1 / span 2;
   }
@@ -96,10 +109,15 @@
   max-width: 400px;
   margin: 0 0 0 30px;
 
-  @media screen and (width <= 1280px) {
+  @media screen and (width <= 1650px) {
     row-gap: 20px;
     max-width: 300px;
     margin: 0 0 0 50px;
+  }
+
+  @media screen and (width <= 1100px) {
+    max-width: 280px;
+    margin: 0;
   }
 
   @media screen and (width <= 768px) {
@@ -139,15 +157,12 @@
     line-height: 1; // 100px; /* 100% */
     color: var(--dark-blue, #002d63);
 
-    @media screen and (width <= 1280px) {
+    @media screen and (width <= 1650px) {
       font-size: 80px;
     }
 
-    @media screen and (width <= 768px) {
+    @media screen and (width <= 1100px) {
       font-size: 40px;
-    }
-
-    @media screen and (width <= 360px) {
     }
   }
 
@@ -161,15 +176,9 @@
     line-height: 1; // 48px; /* 100% */
     color: var(--dark-blue, #002d63);
 
-    @media screen and (width <= 1280px) {
-    }
-
-    @media screen and (width <= 768px) {
+    @media screen and (width <= 1100px) {
       margin: 0 0 2px;
       font-size: 24px;
-    }
-
-    @media screen and (width <= 360px) {
     }
   }
 
@@ -181,26 +190,14 @@
     line-height: 1.19; // 38px; /* 118.75% */
     color: var(--dark-blue, #002d63);
 
-    @media screen and (width <= 1280px) {
+    @media screen and (width <= 1650px) {
       font-size: 24px;
       line-height: 1.17; // 28px; /* 116.667% */
     }
 
-    @media screen and (width <= 768px) {
+    @media screen and (width <= 1100px) {
       font-size: 20px;
       line-height: 1.2; // 24px; /* 120% */
     }
   }
-
-  @media screen and (width <= 360px) {
-  }
-}
-
-@media screen and (width <= 1280px) {
-}
-
-@media screen and (width <= 768px) {
-}
-
-@media screen and (width <= 360px) {
 }
