--- a/src/components/LeadSection/LeadSection.module.scss
+++ b/src/components/LeadSection/LeadSection.module.scss
@@ -149,7 +149,7 @@
     border-bottom: 1px solid var(--dark-blue, #002d63);
   }
 
-  &BigTitle {
+  &TitleBig {
     font-family: Molot, sans-serif;
     font-size: 100px;
     font-weight: 400;
