--- a/src/components/ui/Button/Button.module.scss
+++ b/src/components/ui/Button/Button.module.scss
@@ -108,8 +108,8 @@
   align-items: center;
   justify-content: center;
 
-  width: var(--btn-size);
-  height: var(--btn-size);
+  width: 100%;
+  height: 100%;
 
   font-family: Germano-Regular, sans-serif;
   font-size: 64px;
