--- a/src/components/Header/SubMenu/SubMenu.module.scss
+++ b/src/components/Header/SubMenu/SubMenu.module.scss
@@ -13,7 +13,7 @@
 
   transition: all 200ms ease-in;
 
-  &_visible {
+  &Visible {
     visibility: visible;
     opacity: 1;
   }
@@ -25,7 +25,7 @@
     align-items: flex-start;
     justify-content: flex-start;
 
-    width: 288px;
+    width: max-content;
     margin: 62px 10px 20px 90px;
     padding: 20px 20px 28px;
 
@@ -55,6 +55,12 @@
     line-height: 1.17; // 28px;
     color: var(--darkblue, #002d63);
     text-align: left;
+
+    &Active {
+      text-decoration: underline;
+      text-decoration-thickness: 2px;
+      text-underline-offset: 5px;
+    }
   }
 }
 
@@ -75,12 +81,8 @@
     transition: max-height 0.5s;
     transition: all 200ms ease-in;
 
-    &_visible {
+    &Visible {
       max-height: 1000px; // should be bigger than self original height for transition:max-height to work
-    }
-
-    &_hidden {
-      display: none;
     }
 
     &List {
