--- a/src/components/LeadSection/LeadSectionCards/LeadSectionCards.module.scss
+++ b/src/components/LeadSection/LeadSectionCards/LeadSectionCards.module.scss
@@ -1,3 +1,39 @@
+.cards {
+  display: flex;
+  flex-direction: column;
+  row-gap: 40px;
+
+  max-width: 400px;
+  margin: 0 0 0 30px;
+
+  @media screen and (width <= 1650px) {
+    row-gap: 20px;
+    max-width: 300px;
+    margin: 0 0 0 50px;
+  }
+
+  @media screen and (width <= 1100px) {
+    max-width: 280px;
+    margin: 0;
+  }
+
+  @media screen and (width <= 768px) {
+    grid-column: 1 / span 1;
+    grid-row: 2 / span 1;
+    max-width: 280px;
+    margin: 0;
+  }
+
+  @media screen and (width <= 430px) {
+    max-width: 100%;
+  }
+
+  @media screen and (width <= 360px) {
+    row-gap: 15px;
+    max-width: 100%;
+  }
+}
+
 .card {
   display: flex;
   flex-direction: column;
@@ -21,14 +57,6 @@
     font-style: normal;
     line-height: 1; // 100px; /* 100% */
     color: var(--dark-blue, #002d63);
-
-    &Link {
-      transition: 0.2s ease-in-out;
-
-      &:hover {
-        opacity: 0.6;
-      }
-    }
 
     @media screen and (width <= 1650px) {
       font-size: 80px;
@@ -72,5 +100,14 @@
       font-size: 20px;
       line-height: 1.2; // 24px; /* 120% */
     }
+  }
+}
+
+.link {
+  text-decoration: underline;
+  transition: 0.2s ease-in-out;
+
+  &:hover {
+    opacity: 0.6;
   }
 }
