--- a/src/components/PageTitle/PageTitle.module.scss
+++ b/src/components/PageTitle/PageTitle.module.scss
@@ -1,8 +1,7 @@
 .pageTitle {
   box-sizing: border-box;
   width: 100%;
-
-  // margin-top: 120px;
+  margin-top: 120px;
 
   // margin-left: -35px; // combine with letter-spacing
   padding: 0 100px;
@@ -15,7 +14,7 @@
   font-style: normal;
 
   // line-height: 0.78; // 600px; /* 93.75% */
-  line-height: 1; // 600px; /* 93.75% */
+  line-height: 1.1; // 600px; /* 93.75% */
   color: var(--dark-blue, #002d63);
 
   // text-align: center;
