refactor: add margin for centering

--- a/src/components/WorkStages/WorkStages.module.scss
+++ b/src/components/WorkStages/WorkStages.module.scss
@@ -3,6 +3,7 @@
 
   width: 100%;
   max-width: 1920px;
+  margin: 0 auto;
 
   background: var(--white, #fff);
   border-bottom: 2px solid var(--dark-blue, #002d63);
