--- a/src/components/ui/icons/SpinnerIcon/SpinnerIcon.module.scss
+++ b/src/components/ui/icons/SpinnerIcon/SpinnerIcon.module.scss
@@ -1,5 +1,45 @@
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  12.5% {
+    transform: rotate(45deg);
+  }
+
+  25% {
+    transform: rotate(90deg);
+  }
+
+  37.5% {
+    transform: rotate(135deg);
+  }
+
+  50% {
+    transform: rotate(180deg);
+  }
+
+  62.5% {
+    transform: rotate(225deg);
+  }
+
+  75% {
+    transform: rotate(270deg);
+  }
+
+  87.5% {
+    transform: rotate(315deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 .spinnerIcon {
   line-height: 0;
+  animation: rotate 2s steps(1) infinite;
+  animation-direction: reverse;
 
   & > svg {
     width: 100%;
