--- a/src/components/ResultPreviewSection/ResultPreviewSection.module.scss
+++ b/src/components/ResultPreviewSection/ResultPreviewSection.module.scss
@@ -9,6 +9,10 @@
   padding: 0 0 100px;
 
   color: var(--dark-blue, #002d63);
+
+  @media screen and (width <= 1920px) {
+    padding: 0 0 6vw;
+  }
 }
 
 .sectionTitle {
@@ -45,6 +49,10 @@
 }
 
 .slider {
+  --slide-width: 55%;
+  --slide-height: 680px;
+  --slide-side-offset: 10%;
+
   position: relative;
 
   display: flex;
@@ -53,7 +61,27 @@
 
   box-sizing: border-box;
   width: 100%;
+  min-height: var(--slide-height);
   margin: 100px 0 0;
+
+  @media screen and (width <= 1940px) {
+    --slide-height: 35vw;
+  }
+
+  @media screen and (width <= 1280px) {
+    margin: 80px 0 0;
+  }
+
+  @media screen and (width <= 768px) {
+    --slide-width: 60%;
+    --slide-height: 40vw;
+
+    margin: 52px 0 0;
+  }
+
+  @media screen and (width <= 420px) {
+    margin: 32px 0 0;
+  }
 }
 
 .laptop {
@@ -63,25 +91,28 @@
   left: 50%;
   transform: translate(-50%, 0);
 
-  width: 60%;
+  width: 70%;
+
+  @media screen and (width <= 768px) {
+    width: 77%;
+  }
 }
 
 .slides {
-  --slide-width: 46%;
-  --slide-height: 555px;
-  --slide-side-offset: 10%;
-
   position: relative;
 
   width: 100%;
   height: var(--slide-height);
-  margin: 40px 0 0;
+  margin: 1% 0 0;
 
   transition: transform 0.5s ease-in-out;
 }
 
 .slide {
   position: absolute;
+
+  overflow-y: hidden;
+
   min-width: var(--slide-width);
   max-width: var(--slide-width);
   height: var(--slide-height);
@@ -145,8 +176,9 @@
 
   &Img {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     object-fit: cover;
+    object-position: 50% top;
   }
 }
 
@@ -162,6 +194,10 @@
 
   border-radius: 50%;
 
+  -webkit-tap-highlight-color: #0000;
+
+  -webkit-touch-callout: none;
+
   &:hover {
     filter: drop-shadow(0 10px 20px rgb(0 45 99 / 30%));
   }
@@ -173,6 +209,18 @@
   &Right {
     right: var(--btn-side-offset);
   }
+
+  @media screen and (width <= 1280px) {
+    --btn-side-offset: 50px;
+  }
+
+  @media screen and (width <= 768px) {
+    --btn-side-offset: 32px;
+  }
+
+  @media screen and (width <= 600px) {
+    --btn-side-offset: 16px;
+  }
 }
 
 .btnIcon {
@@ -181,4 +229,17 @@
   &Left {
     transform: rotate(180deg);
   }
+
+  @media screen and (width <= 600px) {
+    width: 44px;
+    height: 44px;
+  }
+}
+
+.spinner {
+  position: absolute;
+  z-index: 5;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
