--- a/src/styles/variables/global.scss
+++ b/src/styles/variables/global.scss
@@ -1,4 +1,3 @@
-/* Figma Styles of your File */
 :root {
   /* Colors */
   --black: #111;
@@ -185,4 +184,21 @@
 
   /* Effects */
   --shadow-box-shadow: 0px 10px 20px 0px rgb(0 45 99 / 30%);
+
+  /* Size */
+  --el-max-width: 1720px;
+
+  @media screen and (width <= 1920px) {
+    --el-max-width: calc(1180px + (1720 - 1180) * ((100vw - 1280px) / (1920 - 1280)));
+  }
+
+  @media screen and (width <= 1280px) {
+    --el-max-width: calc(704px + (1180 - 704) * ((100vw - 768px) / (1280 - 768)));
+    --section-title-font-size: calc(48px + (64 - 48) * ((100vw - 768px) / (1280 - 768)));
+  }
+
+  @media screen and (width <= 768px) {
+    --el-max-width: calc(328px + (704 - 328) * ((100vw - 360px) / (768 - 360)));
+    --section-title-font-size: calc(24px + (48 - 24) * ((100vw - 360px) / (768 - 360)));
+  }
 }
