--- a/src/components/LeadSection/LeadSection.module.scss
+++ b/src/components/LeadSection/LeadSection.module.scss
@@ -5,15 +5,12 @@
 
   box-sizing: border-box;
   width: 100%;
-  padding: 0 100px;
+  max-width: var(--el-max-width);
+  margin: 0 auto;
 
   @media screen and (width <= 1840px) {
     column-gap: normal;
     justify-content: space-between;
-  }
-
-  @media screen and (width <= 1650px) {
-    padding: 0 50px;
   }
 
   @media screen and (width <= 1280px) {
@@ -28,15 +25,10 @@
 
   @media screen and (width <= 768px) {
     column-gap: 24px;
-    padding: 0 32px;
   }
 
   @media screen and (width <= 700px) {
     grid-template-columns: auto auto;
-  }
-
-  @media screen and (width <= 480px) {
-    padding: 0 16px;
   }
 
   @media screen and (width <= 430px) {
