--- a/src/components/ui/Text/Text.module.scss
+++ b/src/components/ui/Text/Text.module.scss
@@ -1,5 +1,5 @@
 .text {
-  font-weight: var(--text-1-font-weight, 400);
+  font-weight: 400;
   color: var(--darkblue, #002d63);
   text-decoration-skip-ink: none;
 
@@ -16,44 +16,44 @@
   }
 
   &__molot {
-    font-family: var(--title-h-1-molot-font-family, molot-regular, sans-serif);
+    font-family: molot-regular, sans-serif;
   }
 
   &__germano {
-    font-family: var(--title-h-1-font-family, 'Germano-Regular', sans-serif);
+    font-family: Germano-Regular, sans-serif;
   }
 
   &__gost {
-    font-family: var(--text-1-font-family, 'GostTypeB-Standard', sans-serif);
+    font-family: GostTypeB-Standard, sans-serif;
   }
 
   &__view-molot-1 {
-    font-size: var(--title-h-1-molot-font-size, 128px);
+    font-size: 128px;
     line-height: 1;
   }
 
   &__view-molot-2 {
-    font-size: var(--title-h-2-molot-font-size, 100px);
+    font-size: 100px;
     line-height: 1;
   }
 
   &__view-molot-3 {
-    font-size: var(--title-h-3-molot-font-size, 80px);
+    font-size: 80px;
     line-height: 1;
   }
 
   &__view-molot-4 {
-    font-size: var(--title-h-4-molot-font-size, 66px);
+    font-size: 66px;
     line-height: 1;
   }
 
   &__view-germano-1 {
-    font-size: var(--title-h-1-font-size, 140px);
-    line-height: var(--title-h-1-line-height, 120px);
+    font-size: 140px;
+    line-height: 0.86; // 120px;
   }
 
   &__view-germano-2 {
-    font-size: var(--title-h-2-font-size, 80px);
+    font-size: 80px;
     line-height: 1;
     text-decoration-thickness: 4px;
     text-underline-offset: 12px;
@@ -61,32 +61,32 @@
   }
 
   &__view-germano-3 {
-    font-size: var(--title-h-3-font-size, 64px);
+    font-size: 64px;
     line-height: 1;
     text-decoration-thickness: 3px;
     text-underline-offset: 10px;
   }
 
   &__view-germano-4 {
-    font-size: var(--title-h-4-font-size, 48px);
+    font-size: 48px;
     line-height: 1;
     text-decoration-thickness: 2.5px;
     text-underline-offset: 8px;
   }
 
   &__view-gost-1 {
-    font-size: var(--text-1-font-size, 32px);
-    line-height: var(--text-1-line-height, 38px);
+    font-size: 32px;
+    line-height: 1.19; // 38px;
   }
 
   &__view-gost-2 {
-    font-size: var(--text-2-line-font-size, 24px);
-    line-height: var(--text-2-line-line-height, 28px);
+    font-size: 24px;
+    line-height: 1.17; // 28px;
   }
 
   &__view-gost-3 {
-    font-size: var(--text-3-line-font-size, 20px);
-    line-height: var(--text-3-line-line-height, 24px);
+    font-size: 20px;
+    line-height: 1.2; // 24px;
     text-decoration-thickness: 1px;
     text-underline-offset: 3px;
   }
